--- a/snip/irouter-ex1.html
+++ b/snip/irouter-ex1.html
@@ -8,6 +8,6 @@
 <div id="page2" class="ipage ipage-default">
   Diam sit amet nisl suscipit adipiscing bibendum est ultricies integer. Consequat id porta nibh venenatis cras sed felis eget. Sagittis vitae et leo duis ut diam quam nulla. Urna nec tincidunt praesent semper feugiat nibh. Purus sit amet luctus venenatis lectus magna fringilla. Aliquet nibh praesent tristique magna sit amet purus gravida quis. Fringilla ut morbi tincidunt augue
 </div>
-<div id="page3" class="ipage" irequest='{"get":"http://127.0.0.1","paste_in":"child_of_page4"}'>
+<div id="page3" class="ipage">
   Cursus eget nunc scelerisque viverra. Aliquet porttitor lacus luctus accumsan tortor. Eget mi proin sed libero enim sed faucibus turpis. Sed egestas egestas fringilla phasellus faucibus scelerisque eleifend donec. Ipsum dolor sit amet consectetur adipiscing elit. Molestie at elementum eu facilisis sed odio morbi. Enim ut sem viverra aliquet eget sit. 
 </div>
